--- a/style.css
+++ b/style.css
@@ -1,12 +1,30 @@
+body, html {
+    margin: 0;
+    padding: 0;
+    width: 100%;
+}
+
 .cabecalho {
     overflow: hidden;
-    background-color: #333;
+    background-color: #2f3b69;
     position: fixed;
     top: 0;
+    left: 0; 
+    right: 0; 
     width: 100%;
     text-align: center;
     padding: 20px 0;
 }
+
+.logo {
+    position: absolute;
+    left: 25px; /* Ajuste a distância da borda esquerda conforme necessário */
+    width: 150px;
+    top: 5px; /* Centraliza verticalmente */
+}
+
+
+
 
 .cabecalho a {
     display: inline-block;
@@ -16,20 +34,21 @@
     text-decoration: none;
 }
 
-.cabecalho a:hover {
-    background-color: #ddd;
-    color: black;
-}
-
-.content {
+.conteudo {
+    flex: 1;
     padding: 16px;
-    margin-top: 50px; /* Espaço para a barra de navegação fixa */
+    margin-top: 80px; /* Ajuste conforme necessário */
+    background-color: #ebe5f3;
 }
 
 .rodape {
-    background-color:#333; 
-    color:#fff; 
-    padding:20px; 
-    text-align:center;
+    background-color: #2f3b69;
+    color: #fff;
+    text-align: center;
+    padding: 20px;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    position: relative; 
 }
 
