--- a/style.css
+++ b/style.css
@@ -14,17 +14,8 @@ body, html {
     width: 100%;
     text-align: center;
     padding: 20px 0;
+    z-index: 1000; /* Certifique-se que o cabeçalho está acima dos outros elementos */
 }
-
-.logo {
-    position: absolute;
-    left: 25px; /* Ajuste a distância da borda esquerda conforme necessário */
-    width: 150px;
-    top: 5px; /* Centraliza verticalmente */
-}
-
-
-
 
 .cabecalho a {
     display: inline-block;
@@ -34,11 +25,34 @@ body, html {
     text-decoration: none;
 }
 
-.conteudo {
-    flex: 1;
-    padding: 16px;
-    margin-top: 80px; /* Ajuste conforme necessário */
+.logo {
+    position: absolute;
+    left: 25px; /* Ajuste a distância da borda esquerda conforme necessário */
+    width: 150px;
+    top: 5px; /* Centraliza verticalmente */
+}
+
+.inicio {
+    margin-top: 80px; /* Ajuste conforme necessário para evitar sobreposição */
+}
+
+.buttoninicial {
+    background-color: #2f3b69;
+    position: absolute;
+    top: 78%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    padding: 10px;
+}
+
+.sobinicial {
     background-color: #ebe5f3;
+    position: absolute;
+    top: 60%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+    padding: 100px;
 }
 
 .rodape {
@@ -51,4 +65,3 @@ body, html {
     right: 0;
     position: relative; 
 }
-
